typescript/checker/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithNumberType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            67,
        ),
        hi: BytePos(
            73,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithNumberType.ts:3:5
  |
3 | var NUMBER: number;
  |     ^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            274,
        ),
        hi: BytePos(
            275,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithNumberType.ts:16:16
   |
16 | var objA = new A();
   |                ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1114,
        ),
        hi: BytePos(
            1115,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithNumberType.ts:49:5
   |
49 | var z: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1129,
        ),
        hi: BytePos(
            1130,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithNumberType.ts:50:5
   |
50 | var x: number[];
   |     ^

